Fix gap for order notes on/off option.

--- a/assets/js/blocks/cart-checkout/checkout/editor.scss
+++ b/assets/js/blocks/cart-checkout/checkout/editor.scss
@@ -27,3 +27,7 @@
 	max-height: 1000px;
 	overflow: hidden;
 }
+
+.wc-block-checkout__actions {
+	margin-top: $gap;
+}
