--- a/assets/js/blocks/cart-checkout/checkout/form/order-notes/style.scss
+++ b/assets/js/blocks/cart-checkout/checkout/form/order-notes/style.scss
@@ -1,5 +1,6 @@
 .wc-block-checkout__add-note {
-	padding: $gap $gap $gap 9px;
+	padding: $gap $gap 0 9px;
+	margin-bottom: $gap;
 }
 
 .wc-block-checkout__add-note .wc-block-components-textarea {
